--- a/painel/front-end/src/app/componentes/hino/hino-list/hino-list.component.html
+++ b/painel/front-end/src/app/componentes/hino/hino-list/hino-list.component.html
@@ -32,7 +32,7 @@
           <td>{{ hino.numero }}</td>
           <td>{{ hino.pagina }}</td>
           <td>{{ hino.titulo }}</td>
-          <td>{{ hino.favorito }}</td>
+          <td>{{ hino.isFavorito }}</td>
           <td class="text-end">
             <div class="btn-group">
               <a
