--- a/painel/front-end/src/app/componentes/hino/hino-details/hino-details.component.html
+++ b/painel/front-end/src/app/componentes/hino/hino-details/hino-details.component.html
@@ -18,12 +18,17 @@
     <p class="fw-bold">Comentário</p>
     <p>{{hino?.comentario}}</p>
     <p class="fw-bold">Favorito ?</p>
-    <p>{{hino?.favorito}}</p>
+    <p>{{hino?.isFavorito}}</p>
   </div>
 
-    <div class="">
+  <div class="mb-3">
+    <app-estrofe-list [hinoId]="hino?.id" [estrofes]="estrofes"/>
+
+  </div>
+  
+    <div>
       <button type="button" class="btn btn-primary me-2" (click)="back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Voltar</button>
-      <button type="button" class="btn btn-secondary"    [routerLink]="['/hino/editar/', hino!.id]"
+      <button type="button" class="btn btn-secondary"    [routerLink]="['/hino/editar/', hino?.id]"
       [routerLinkActive]="['router-link-active']">Editar</button>
     </div>
   </div>
