--- a/painel/front-end/src/app/componentes/hino/hino-update/hino-update.component.html
+++ b/painel/front-end/src/app/componentes/hino/hino-update/hino-update.component.html
@@ -86,10 +86,10 @@
 
     <div class="col-4 mb-3">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="favorito" formControlName="favorito" />
+        <input class="form-check-input" type="checkbox" id="isFavorito" formControlName="isFavorito" />
         <label
           class="form-check-label"
-          for="favorito"
+          for="isFavorito"
 
         >
           Favorito ?
