--- a/painel/front-end/src/app/componentes/navbar/navbar.component.html
+++ b/painel/front-end/src/app/componentes/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-primary mb-5" data-bs-theme="dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Hinário</a>
+    <a class="navbar-brand fw-bold me-5" href="#">HINÁRIO: LOUVAI AO SENHOR (IERA)</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -12,19 +12,13 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse text-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a
           class="nav-link"
           [routerLink]="['/hino']"
           [routerLinkActive]="['router-link-active']"
           >Hinos</a
-        >
-        <a
-          class="nav-link"
-          [routerLink]="['/estrofe']"
-          [routerLinkActive]="['router-link-active']"
-          >Estrofes</a
         >
         <a
           class="nav-link"
@@ -36,3 +30,5 @@
     </div>
   </div>
 </nav>
+
+
