--- a/painel/front-end/src/app/componentes/hino/hino-list/hino-list.component.html
+++ b/painel/front-end/src/app/componentes/hino/hino-list/hino-list.component.html
@@ -23,6 +23,7 @@
           <th scope="col">Pagina</th>
           <th scope="col">Titulo</th>
           <th scope="col">Favorito</th>
+          <th scope="col">Língua</th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -33,6 +34,7 @@
           <td>{{ hino.pagina }}</td>
           <td>{{ hino.titulo }}</td>
           <td>{{ hino.isFavorito }}</td>
+          <td>{{ hino.lingua }}</td>
           <td class="text-end">
             <div class="btn-group">
               <a
