mais hinos adicionados

--- a/painel/front-end/src/app/componentes/estrofe/estrofe-create/estrofe-create.component.html
+++ b/painel/front-end/src/app/componentes/estrofe/estrofe-create/estrofe-create.component.html
@@ -21,6 +21,7 @@
           id="descricao"
           formControlName="descricao"
           required="true"
+          rows="10"
         ></textarea>
       </div>
     </div>
@@ -44,7 +45,7 @@
      </div>
    </div>
 
-    <div class="col-12">
+    <div class="col-12 mb-3">
       <button
         type="submit"
         class="btn btn-primary me-2"
