mobile: refactorando que adiciona/remove dos favoritos

--- a/mobile/src/app/pages/hinos-favoritos/hinos-favoritos.page.html
+++ b/mobile/src/app/pages/hinos-favoritos/hinos-favoritos.page.html
@@ -16,7 +16,7 @@
       </ion-item>
     } @empty {
       <div class="ion-padding">
-        <p>Nenhum hinos aos Favoritos!</p>
+        <p>Nenhum hino adicionado aos Favoritos!</p>
       </div>
     }
   </ion-list>
