--- a/mobile/src/app/pages/hino-read/hino-read.page.html
+++ b/mobile/src/app/pages/hino-read/hino-read.page.html
@@ -48,6 +48,13 @@
   </ion-fab>
 
 
+  <ion-fab slot="fixed" horizontal="end" vertical="bottom">
+    <ion-fab-button (click)="aumentarTamanhoFonte()">
+      <ion-icon class="fa fa-search"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+
 </ion-content>
 
 <ion-footer class="ion-no-border">
