--- a/mobile/src/app/pages/hino-read/hino-read.page.scss
+++ b/mobile/src/app/pages/hino-read/hino-read.page.scss
@@ -27,13 +27,13 @@ ion-content {
 .coro {
   text-align: left;
   line-height: 1.5em;
-  font-size: 1.2em;
+  font-size: 19.2px;
   font-style: italic;
 }
 .estrofe {
   text-align: justify;
   line-height: 1.5em;
-  font-size: 1.2em;
+  font-size: 19.2px;
 }
 
 ion-toast {
@@ -41,7 +41,7 @@ ion-toast {
 }
 
 .estrofe-note {
-  font-size: 1em;
+  font-size: 16px;
   margin-right: 0.1em;
 }
 
@@ -52,7 +52,7 @@ ion-toast {
 
 ion-label {
   margin-right: 1em;
-  font-size: 1.2em;
+  font-size: 19.2px;
   color: hsl(58, 100%, 50%);
 }
 
