--- a/mobile/src/app/app.component.scss
+++ b/mobile/src/app/app.component.scss
@@ -201,15 +201,16 @@ MY CSS
 }
 
 .footer{
-  margin-bottom: 5%;
+  padding-top: 3%;
+  padding-bottom: 3%;
   box-shadow: none;
   text-align: center;
-}
-
-.texto{
-  font-weight: 200;
+  border-top: 1px #7e581ec9 solid;
 }
 
 small{
   font-style: italic;
+  font-weight: 700;
+  color: #7e581e;
 }
+
