--- a/mobile/src/app/pages/pesquisa/pesquisa.page.html
+++ b/mobile/src/app/pages/pesquisa/pesquisa.page.html
@@ -7,6 +7,7 @@
       [debounce]="1000"
       (ionInput)="pesquisaOnJSON($event.target.value?.toString())"
       (ionClear)="setVezio()"
+      [autofocus]="autoFocus"
     ></ion-searchbar>
   </ion-toolbar>
 </ion-header>
